--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,13 @@
 name = "neubauten"
 version = "0.1.0"
 authors = ["André Ligné <hello@bzf.se>"]
+build = "build.rs"
 
 [dependencies]
-rustify = { path = "../rustify" }
+rustify = { git = "https://github.com/bzf/rustify.git" }
+rustbox = "*"
+libc = "0.2.8"
+rustc-serialize = "0.3.19"
+
+[build-dependencies]
+gcc = "0.3.28"
