--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["André Ligné <hello@bzf.se>"]
 build = "build.rs"
 
 [dependencies]
-rustify = { git = "https://github.com/bzf/rustify.git" }
+rustify = { git = "https://github.com/bzf/rustify" }
 rustbox = "*"
 libc = "0.2.8"
 rustc-serialize = "0.3.19"
